--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -110,4 +110,13 @@ see here: http://static.springsource.org/spring/docs/current/spring-framework-re
         <url-pattern>/*</url-pattern>
     </filter-mapping>
 
+<resource-ref>
+  <description>Primary database</description>
+  <res-ref-name>jdbc/petclinicx</res-ref-name>
+  <jndi-name>jdbc/petclinic</jndi-name>
+  <res-type>javax.sql.DataSource</res-type>
+  <res-auth>CONTAINER</res-auth>
+</resource-ref>
+
+
 </web-app>
